More constraints added for the interfacing of MINERful with RuM.