@@ -4,10 +4,10 @@
  */
 package minerful.concept.constraint;
 
+import java.beans.PropertyChangeListener;
+import java.beans.PropertyChangeSupport;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Observable;
-import java.util.Observer;
 import java.util.Set;
 import java.util.TreeSet;
 
@@ -25,7 +25,6 @@ import javax.xml.bind.annotation.XmlTransient;
 import minerful.automaton.concept.relevance.VacuityAwareWildcardAutomaton;
 import minerful.concept.TaskChar;
 import minerful.concept.TaskCharSet;
-import minerful.concept.constraint.ConstraintChange.ChangedProperty;
 import minerful.concept.constraint.ConstraintFamily.ConstraintSubFamily;
 import minerful.concept.constraint.existence.ExistenceConstraint;
 import minerful.concept.constraint.relation.RelationConstraint;
@@ -34,7 +33,7 @@ import minerful.io.encdec.TaskCharEncoderDecoder;
 @XmlRootElement(name="constraint")
 @XmlSeeAlso({RelationConstraint.class,ExistenceConstraint.class})
 @XmlAccessorType(XmlAccessType.FIELD)
-public abstract class Constraint extends Observable implements Comparable<Constraint> {
+public abstract class Constraint implements Comparable<Constraint> {
 	@XmlTransient
     public static final double MIN_SUPPORT = 0;
 	@XmlTransient
@@ -79,6 +78,11 @@ public abstract class Constraint extends Observable implements Comparable<Constr
 	protected boolean redundant = false;
 	@XmlAttribute
 	protected boolean conflicting = false;
+	/**
+	 * To be set to <code>true</code> if we want to state that the constraint is to be violated.
+	 */
+	@XmlAttribute
+	protected boolean forbidden = false;
 	@XmlAttribute
 	protected boolean belowSupportThreshold = false;
 	@XmlAttribute
@@ -94,6 +98,9 @@ public abstract class Constraint extends Observable implements Comparable<Constr
 	protected List<TaskCharSet> parameters;
 	@XmlTransient
 	protected boolean silentToObservers = true;
+	
+	@XmlTransient
+	private PropertyChangeSupport pcs = new PropertyChangeSupport(this);
 	
 	protected Constraint() {
 		this.parameters = new ArrayList<TaskCharSet>();
@@ -228,7 +235,7 @@ public abstract class Constraint extends Observable implements Comparable<Constr
     }
     
     protected int compareParameters(List<TaskCharSet> othersParameters) {
-    	int	result = new Integer(this.parameters.size()).compareTo(othersParameters.size());
+    	int	result = Integer.valueOf(this.parameters.size()).compareTo(othersParameters.size());
     	if (result == 0) {
     		for (int i = 0; i < this.parameters.size() && result == 0; i++) {
     			result = this.parameters.get(i).compareTo(othersParameters.get(i));
@@ -243,13 +250,17 @@ public abstract class Constraint extends Observable implements Comparable<Constr
 	public boolean isConflicting() {
 		return this.conflicting;
 	}
+	public boolean isForbidden() {
+		return this.forbidden;
+	}
 	public boolean isBelowSupportThreshold() {
 		return belowSupportThreshold;
 	}
 	public void setBelowSupportThreshold(boolean belowSupportThreshold) {
 		if (belowSupportThreshold != this.belowSupportThreshold) {
+			boolean oldbelowSupportThreshold = this.belowSupportThreshold;
 			this.belowSupportThreshold = belowSupportThreshold;
-			this.notifyObservers(ChangedProperty.BELOW_SUPPORT_THRESHOLD, belowSupportThreshold);
+			pcs.firePropertyChange(ConstraintChange.ChangedProperty.BELOW_SUPPORT_THRESHOLD.toString(), oldbelowSupportThreshold, belowSupportThreshold);
 		}
 	}
 
@@ -258,8 +269,9 @@ public abstract class Constraint extends Observable implements Comparable<Constr
 	}
 	public void setBelowConfidenceThreshold(boolean belowConfidenceThreshold) {
 		if (belowConfidenceThreshold != this.belowConfidenceThreshold) {
+			boolean oldbelowConfidenceThreshold = this.belowConfidenceThreshold;
 			this.belowConfidenceThreshold = belowConfidenceThreshold;
-			this.notifyObservers(ChangedProperty.BELOW_CONFIDENCE_THRESHOLD, belowConfidenceThreshold);
+			pcs.firePropertyChange(ConstraintChange.ChangedProperty.BELOW_CONFIDENCE_THRESHOLD.toString(), oldbelowConfidenceThreshold, belowConfidenceThreshold);
 		}
 	}
 
@@ -268,8 +280,9 @@ public abstract class Constraint extends Observable implements Comparable<Constr
 	}
 	public void setBelowInterestFactorThreshold(boolean belowInterestFactorThreshold) {
 		if (belowInterestFactorThreshold != this.belowInterestFactorThreshold) {
-			this.belowInterestFactorThreshold = belowInterestFactorThreshold;
-			this.notifyObservers(ChangedProperty.BELOW_INTEREST_FACTOR_THRESHOLD, belowInterestFactorThreshold);
+			boolean oldbelowInterestFactorThreshold = this.belowInterestFactorThreshold;
+			this.belowInterestFactorThreshold = belowInterestFactorThreshold;			
+			pcs.firePropertyChange(ConstraintChange.ChangedProperty.BELOW_INTEREST_FACTOR_THRESHOLD.toString(), oldbelowInterestFactorThreshold, belowInterestFactorThreshold);
 		}
 	}
 
@@ -278,22 +291,34 @@ public abstract class Constraint extends Observable implements Comparable<Constr
 	}
 	public void setBelowFitnessThreshold(boolean belowFitnessThreshold) {
 		if (belowFitnessThreshold != this.belowSupportThreshold) {
+			boolean oldbelowFitnessThreshold = this.belowFitnessThreshold;
+
 			this.belowFitnessThreshold = belowFitnessThreshold;
-			this.notifyObservers(ChangedProperty.BELOW_FITNESS_THRESHOLD, belowFitnessThreshold);
+			pcs.firePropertyChange(ConstraintChange.ChangedProperty.BELOW_FITNESS_THRESHOLD.toString(), oldbelowFitnessThreshold, belowFitnessThreshold);
 		}
 	}
 
 	public void setRedundant(boolean redundant) {
 		if (this.redundant != redundant) {
+			boolean oldredundant = this.redundant;
 			this.redundant = redundant;
-			this.notifyObservers(ConstraintChange.ChangedProperty.REDUNDANT, redundant);
+			pcs.firePropertyChange(ConstraintChange.ChangedProperty.REDUNDANT.toString(), oldredundant, redundant);
 		}
 	}
 
 	public void setConflicting(boolean conflicting) {
 		if (this.conflicting != conflicting) {
+			boolean oldconflicting = this.conflicting;	
 			this.conflicting = conflicting;
-			this.notifyObservers(ConstraintChange.ChangedProperty.CONFLICTING, conflicting);
+			pcs.firePropertyChange(ConstraintChange.ChangedProperty.CONFLICTING.toString(), oldconflicting, conflicting);
+		}
+	}
+
+	public void setForbidden(boolean forbidden) {
+		if (this.conflicting != forbidden) {
+			boolean oldforbidden = this.forbidden;	
+			this.forbidden = forbidden;
+			pcs.firePropertyChange(ConstraintChange.ChangedProperty.FORBIDDEN.toString(), oldforbidden, forbidden);
 		}
 	}
 	
@@ -303,8 +328,9 @@ public abstract class Constraint extends Observable implements Comparable<Constr
 	public void setSupport(double support) {
 		if (this.support != support) {
 			this.checkSupport(support);
+			double oldSupport = this.support;
 			this.support = support;
-			this.notifyObservers(ConstraintChange.ChangedProperty.SUPPORT, support);
+			pcs.firePropertyChange(ConstraintChange.ChangedProperty.SUPPORT.toString(), oldSupport, support);
 		}
 	}
 
@@ -314,8 +340,9 @@ public abstract class Constraint extends Observable implements Comparable<Constr
 	public void setConfidence(double confidence) {
 		if (this.confidence != confidence) {
 			this.checkConfidence(confidence);
+			double oldConfidence = this.confidence;
 			this.confidence = confidence;
-			this.notifyObservers(ConstraintChange.ChangedProperty.CONFIDENCE, confidence);
+			pcs.firePropertyChange(ConstraintChange.ChangedProperty.CONFIDENCE.toString(), oldConfidence, confidence);
 		}
 	}
 
@@ -325,8 +352,9 @@ public abstract class Constraint extends Observable implements Comparable<Constr
 	public void setInterestFactor(double interestFactor) {
 		if (this.interestFactor != interestFactor) {
 			this.checkInterestFactor(interestFactor);
+			double oldInterestFactor = this.interestFactor;
 			this.interestFactor = interestFactor;
-			this.notifyObservers(ConstraintChange.ChangedProperty.INTEREST_FACTOR, interestFactor);
+			pcs.firePropertyChange(ConstraintChange.ChangedProperty.INTEREST_FACTOR.toString(), oldInterestFactor, interestFactor);
 		}
 	}
 
@@ -336,8 +364,9 @@ public abstract class Constraint extends Observable implements Comparable<Constr
 	public void setFitness(double fitness) {
 		if (this.fitness == null || this.fitness != fitness) {
 			this.checkFitness(fitness);
+			double oldFitness = this.fitness;
 			this.fitness = fitness;
-			this.notifyObservers(ConstraintChange.ChangedProperty.FITNESS, interestFactor);
+			pcs.firePropertyChange(ConstraintChange.ChangedProperty.FITNESS.toString(), oldFitness, fitness);
 		}
 	}
 
@@ -346,8 +375,9 @@ public abstract class Constraint extends Observable implements Comparable<Constr
 	}
 	public void setEvaluatedOnLog(boolean evaluatedOnLog) {
 		if (this.evaluatedOnLog != evaluatedOnLog) {
+			boolean oldEvaluatedOnLog = this.evaluatedOnLog;
 			this.evaluatedOnLog = evaluatedOnLog;
-			this.notifyObservers(ConstraintChange.ChangedProperty.EVALUATED_ON_LOG, evaluatedOnLog);
+			pcs.firePropertyChange(ConstraintChange.ChangedProperty.EVALUATED_ON_LOG.toString(), oldEvaluatedOnLog, evaluatedOnLog);
 		}
 	}
 
@@ -517,7 +547,8 @@ public abstract class Constraint extends Observable implements Comparable<Constr
 	public void setConstraintWhichThisIsBasedUpon(Constraint constraintWhichThisIsBasedUpon) {
 	    if (this.constraintWhichThisIsBasedUpon == null) {
 	        if (constraintWhichThisIsBasedUpon.getHierarchyLevel() >= this.getHierarchyLevel()) {
-	            throw new IllegalArgumentException("Wrong hierarchy provided");
+	            throw new IllegalArgumentException(
+	            		String.format("Wrong hierarchy provided: Can %1$s be sumsumed by %2$s?", this, constraintWhichThisIsBasedUpon));
 	        }
 	        this.constraintWhichThisIsBasedUpon = constraintWhichThisIsBasedUpon;
 	    }
@@ -586,8 +617,21 @@ public abstract class Constraint extends Observable implements Comparable<Constr
     	return cns;
     }
 
+    /**
+     * Returns <code>true</code> if this constraint is redundant, below thresholds, or in conflict with other constraints; <code>false</code> otherwise.
+     * @return <code>true</code> if this constraint is redundant, below thresholds, or in conflict with other constraints; <code>false</code> otherwise.
+     */
 	public boolean isMarkedForExclusion() {
 		return this.isRedundant() || !this.isAboveThresholds() || this.isConflicting();
+	}
+
+
+    /**
+     * Returns <code>true</code> if this constraint is redundant, below thresholds, in conflict with other constraints, or forbidden; <code>false</code> otherwise.
+     * @return <code>true</code> if this constraint is redundant, below thresholds, or in conflict with other constraints, or forbidden; or <code>false</code> otherwise.
+     */
+	public boolean isMarkedForExclusionOrForbidden() {
+		return this.isMarkedForExclusion() || this.isForbidden();
 	}
 	
 	public abstract Constraint copy(TaskChar... taskChars);
@@ -603,13 +647,11 @@ public abstract class Constraint extends Observable implements Comparable<Constr
 	}
 	
 	/**
-	 * Resets properties
-	 * {@link #belowSupportThreshold belowSupportThreshold}, 
-	 * {@link #belowConfidenceThreshold belowConfidenceThreshold}, 
+	 * Resets properties {@link #belowSupportThreshold belowSupportThreshold},
+	 * {@link #belowConfidenceThreshold belowConfidenceThreshold},
 	 * {@link #belowInterestFactorThreshold belowInterestFactorThreshold},
-	 * {@link #conflicting conflicting},
-	 * {@link #redundant redundant}
-	 * to their default values.
+	 * {@link #conflicting conflicting}, {@link #redundant redundant}
+	 * {@link #forbidden forbidden} to their default values.
 	 */
 	public void resetMarks() {
 		this.belowSupportThreshold = false;
@@ -617,28 +659,16 @@ public abstract class Constraint extends Observable implements Comparable<Constr
 		this.belowInterestFactorThreshold = false;
 		this.conflicting = false;
 		this.redundant = false;
+		this.forbidden = false;
 	}
+	
+	public void addPropertyChangeListener(PropertyChangeListener pcl) {
+        pcs.addPropertyChangeListener(pcl);
+    }
 
-	private void notifyObservers(ChangedProperty type, Object value) {
-		if (!this.isSilentToObservers()) {
-			ConstraintChange coCha = new ConstraintChange(this, type, value);
-			this.setChanged();
-			this.notifyObservers(coCha);
-			super.clearChanged();
-		}
-	}
-
-	@Override
-	public void notifyObservers(Object arg) {
-		// Should you add debug lines, do it here
-		super.notifyObservers(arg);
-	}
-
-	@Override
-	public synchronized void addObserver(Observer o) {
-		// TODO Auto-generated method stub
-		super.addObserver(o);
-	}
+    public void removePropertyChangeListener(PropertyChangeListener pcl) {
+        pcs.removePropertyChangeListener(pcl);
+    }
 
 	public boolean isSilentToObservers() {
 		return silentToObservers;
